--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <button id="btnPlayYouTube"
                                 type="button" class="btn btn-primary btn-sm" data-toggle="modal"
                                 data-target="#YouTubeModal">
-                            Click me!
+                            Video
                         </button>
                     </div>
                     <div class="modal fade" id="YouTubeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -197,7 +197,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <iframe width="560" height="315"
+                                    <iframe width="100%" height="315"
                                             src="https://www.youtube.com/embed/pidgA8c1XAY?start=1" frameborder="0"
                                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                             allowfullscreen></iframe>
@@ -335,7 +335,7 @@
                         <button id="btnPlayYouTube2"
                                 type="button" class="btn btn-primary btn-sm" data-toggle="modal"
                                 data-target="#YouTubeModal2">
-                            Click me!
+                            Video
                         </button>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/RKWuj1OlDPo"
+                                <iframe width="760" height="315" src="https://www.youtube.com/embed/RKWuj1OlDPo"
                                         frameborder="0"
                                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
