--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
         </div>
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/" style="text-decoration: none"> Kevin Kayirangwa</a>
+            <a href="#">Kevin Kayirangwa</a>
         </div>
     </div>
 </div>
